# fiducia-messaging

./: AGENTS.md  Cargo.toml  Dockerfile  README.md
.cargo/: README.md  audit.toml
migrations/: README.md
src/: README.md  connect.rs  database.rs  envelope.rs  inbox.rs  lib.rs  main.rs  outbox.rs  service.rs
tests/: deprecation_guard.rs
