[package]
name = "fiducia-messaging"
version = "0.1.0"
edition = "2021"
description = "Versioned NATS envelopes with transactional PostgreSQL outbox and inbox"
license = "MIT"

[dependencies]
# Aligned with the canonical fiducia-messaging.rs: same async-nats release and
# the same trimmed feature set (JetStream publishing, Ring TLS backend, nkeys
# for NATS_CREDS_FILE credentials) instead of the full default surface.
async-nats = { version = "0.50.0", default-features = false, features = ["jetstream", "ring", "nkeys"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1.1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json"] }
fiducia-telemetry = { git = "https://github.com/fiducia-cloud/fiducia-telemetry.rs", tag = "v0.2.1" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
